# AIA-CPG

./: .env.example  .gitignore  README.md  context.txt  docker-compose.yml  product.csv  pyproject.toml  requirements.txt  run_ci_locally.sh
.github/workflows/: ci.yml
ai/: gemini_client.py
api/: config.py  dependencies.py  logging_config.py  main.py  registry.py
api/routes/: __init__.py  forecast.py  insights.py  sales.py  upload.py
api/services/: upload_service.py
database/: __init__.py  connection.py  models.py
docker/: api.Dockerfile  frontend.Dockerfile
docs/adr/: 0001-initial-architecture.md  0002-ci-cd-pipeline-and-quality-gates.md
forecasting/: __init__.py  model.py
frontend/: app.py
ingestion/: __init__.py  csv_reader.py
test_data/: customer_master.csv  dim_date.csv  dim_product.csv  dim_store.csv  fact_sales.csv
tests/: conftest.py  test_ai.py  test_api.py  test_forecasting.py  test_ingestion.py  test_upload.py
transformations/: __init__.py  cleaner.py
