[project]
name = "cpg-sales-analytics"
version = "0.1.0"
description = "CPG Sales Analytics Platform with FastAPI, Streamlit, Prophet, and Gemini API"
authors = [
    { name = "AIA Team", email = "info@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "prophet>=1.1.5",
    "google-generativeai>=0.4.0",
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
